k8s-example/ingress/ejemplo1/service-bg.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    run: app
    version: 0.0.1
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
